# deploy_demo_ws

./: .gitignore  README.md  colcon_defaults.yaml  custom_rosdep.yaml  env.sh  index-v4.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/action_output/: action.yml
.github/actions/action_with_args/: action.yaml
.github/actions/my_action/: action.yaml
.github/actions/ros_build/: action.yaml
.github/workflows/: README.md  build.yml  demo.yaml
Docker/: Dockerfile.arm  Dockerfile.jetson
cmake/: aarch64.cmake
rosdep/: custom_rosdep.yaml
src/: ros-humble-pkg-interface-dbgsym_0.0.1-0jammy_arm64.ddeb  ros-humble-pkg-interface_0.0.1-0jammy_arm64.deb  ros-humble-pkg-server_0.0.0-0jammy_arm64.deb
src/basic_interface/: CMakeLists.txt  package.xml
src/pkg_client/: CMakeLists.txt  package.xml
src/pkg_client/launch/: client_server.launch.py
src/pkg_client/pkg_client/: __init__.py  my_node.py
src/pkg_interface/: CMakeLists.txt  package.xml
src/pkg_interface/msg/: Demo2.msg
src/pkg_server/: CMakeLists.txt  package.xml
src/pkg_server/pkg_server/: my_node.py
